updating url paths to relative

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Lisa is a developer.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/Users/LMS/Code/github-pages/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="/Users/LMS/Code/github-pages/public/static/css/main.css">
+	<link rel="icon" href="../public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
+	<link rel="stylesheet" type="text/css" href="../public/static/css/main.css">
 
 </head>
 <body>
@@ -12,7 +12,7 @@
 		<div class="page page-home">
 			<header class="header">
  				<i class="header__menu-icon">
- 					<!-- <img width="30" height="30" src="/Users/LMS/Code/github-pages/public/static/img/icons/nav.svg"> -->
+ 					<!-- <img width="30" height="30" src="../public/static/img/icons/nav.svg"> -->
  				</i>
  			</header>
 			<section class="section section-landing">
@@ -20,7 +20,7 @@
 					<span class="emphasis">Just develop it</span>
 					I'm a Chicago born and bred geek with a love for tech, exploring, and a tenacious drive to succeed.
 				</h1>
-				<img class="image button-arrow button-arrow--bottom page-home__button-arrow--bottom" width="120" height="120" src="/Users/LMS/Code/github-pages/public/static/img/icons/arrow.svg">
+				<img class="image button-arrow button-arrow--bottom page-home__button-arrow--bottom" width="120" height="120" src="../public/static/img/icons/arrow.svg">
 			</section>
 			<section class="section section-about">
 				<div class="section-about__copy--wrapper">
@@ -182,6 +182,6 @@
 			</footer>
 		</div>
 	</div>
-	<script src="/Users/LMS/Code/github-pages/public/static/js/timeline.js" type="text/javascript"></script>
+	<script src="../public/static/js/timeline.js" type="text/javascript"></script>
 </body>
 </html>
