updating contact email address

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<div class="section-contact__copy">
 					<h3 class="subtitle section-contact__subtitle">Let's work on the next challenge together</h3>
 					<p class="p section-contact__p">Send me a message...</p>
-					<a class="button button-primary page-home__button-primary" href="mailto:islisamarie@gmail.com?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
+					<a class="button button-primary page-home__button-primary" href="mailto:lisa@lisa-marie.org?subject=Hey%20Lisa!&amp;body=I%20was%20just%20on%20your%20site%20and%20wanted%20to%20say..">Email me</a>
 					<p class="p section-contact__social-title">Or check out my repos, tweets and favorite collections</p>
 					<ul class="list list-social">
 						<li class="list__item list-social__item">
