changing order of timeline

--- a/index.html
+++ b/index.html
@@ -59,69 +59,68 @@
 			  <ul class="list timeline__list">
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2016</time> Moved back to Chicago and started my namesake business.
+			      	<time>2005 - </time>Entered college as a fashion design student at the Art Institute of Chicago.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2015</time> Continued front-end development at Superhero Cheesecake.
+			        <time>2008 - </time>Left art school to persue a degree in Art History at the University of Illinois at Urbana-Champaign (UIUC).
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2015</time> Took my first junior developer position at Qelp.
+			        <time>2010 - </time>Graduated with a degree in Art History from UIUC.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2015</time> Continued learning RoR as an intern at Inspire.
+			        <time>2011 - </time>Raised $1 million as Campaign Manager for a co-op's expansion, $700K raised in under 60 days.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2014</time> Started my first web development internship at Springest, working with Ruby on Rails.
+			        <time>2012 - </time>Managed a women's fashion retail store and exceeded my goals by 120% each month.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2013</time> Opened up Terminal and Codeacademy.
+			        <time>2013 - </time>Left the States and moved across the pond to Utrecht, The Netherlands with my husband.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2013</time> Moved to Utrecht, Netherlands with my husband.
+			        <time>2013 - </time>Started learning how to program; opened up Terminal and Codeacademy.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2012</time> Managed a women's fashion retail store and exceeded my goals by 20% each month.
+			        <time>2014 - </time>Started my first web development internship at Springest in Amsterdam, working with Ruby on Rails.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2011</time> Raised $1 million as Campaign Manager for a co-op's expansion, $700K raised in under 60 days.
+			        <time>2015 - </time>Continued learning RoR as an intern at Inspire in Utrecht.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2010</time> Graduated with a degree in Art History.
+			        <time>2015 - </time>Took my first junior developer position at Qelp, writing HMTL/CSS, jQuery and JavaScript.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2008</time> Left art school to persue a degree in Art History.
+			      	<time>2015 - </time>Continued front-end development at Superhero Cheesecake, writing fast, animation heavy sites using GreenSock TweenMax.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2005</time> Entered college as a fashion design student.
+			        <time>2016 - </time>Moved to Chicago and started my namesake business.
 			      </div>
 			    </li>
 			  </ul>
 			</section>
 		
-			<section class="section-travel">	
-			</section>
+			<section class="section-travel"></section>
 		
 			<section class="section section-contact">
 				<div class="section-contact__copy">
