fixing typo and clarification

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			        <time>2015 - </time>Took my first junior developer position at Qelp, writing HMTL/CSS, jQuery and JavaScript.
+			        <time>2015 - </time>Took my first junior developer position at Qelp, writing HTML/CSS, jQuery and JavaScript.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
-			      	<time>2015 - </time>Continued front-end development at Superhero Cheesecake, writing fast, animation heavy sites using GreenSock TweenMax.
+			      	<time>2015 - </time>Continued front-end development at Superhero Cheesecake, writing fast, animation heavy sites using GreenSock's TweenMax.
 			      </div>
 			    </li>
 			    <li class="timeline__list__item">
