--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
 	<link rel="stylesheet" type="text/css" href="/public/static/css/main.css">
-
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script type="text/javascript" src="/public/static/js/lists.js"></script>
+ 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
 	<div class="main">
