updating where i am currently

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						</p>
 					</div>	
 					<div class="section-about__copy">
-						<h3 class="subtitle--emphasis">Where I am currently..</h3>
+						<h3 class="subtitle--emphasis">Where I am currently...</h3>
 						<p class="p">
-							Upon relocating to Chicago I started my own freelancing business for web development. I'm currently looking for the right company to learn and grow at to do backend development. I've started <a class="link" href="udacity.com/course/intro-to-computer-science--cs101">udacity's Intro to Computer Science</a> class to learn python. I have expereince with Ruby on Rails and Javascript for web development. For the past year and a half I've been creating responsive solutions that work across multiple use-cases and browsers for high profile companies.
+							Upon relocating to Chicago I started my own freelancing business for web development. I'm currently a Front End Developer at <a class="link" href="http://www.backstopsolutions.com" target="_blank">Backstop Solutions</a>. I have expereince with Ruby on Rails and Javascript for web development. For the past two years I've been creating responsive solutions that work across multiple use-cases and browsers for high profile companies.
 						</p>
 					</div>
 					<div class="section-about__copy">
@@ -117,6 +117,11 @@
 			    <li class="timeline__list__item">
 			      <div class="timeline__block">
 			        <time>2016 - </time>Moved to Chicago and started my namesake business.
+			      </div>
+			    </li>
+			    <li class="timeline__list__item">
+			      <div class="timeline__block">
+			        <time>2016 - </time>Started at Backstop Solutions as a Front End Developer.
 			      </div>
 			    </li>
 			  </ul>
