--- a/index.html
+++ b/index.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Under Construction</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/public/static/img/favicon.ico" type="image/ico" sizes="16x16"/>
-	<link rel="stylesheet" type="text/css" href="/public/static/css/main.css">
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script type="text/javascript" src="/public/static/js/lists.js"></script>
- 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bloomberry Abode | Cultivating Beauty in Your Space</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
-	<div class="main">
-		<div class="page page-home">
-			<div>Under construction</div>
-		</div>
-	</div>
-	<script src="/public/static/js/timeline.js" type="text/javascript"></script>
+
+    <header>
+        <nav>
+            <a href="#" class="logo">Bloomberry Abode</a>
+            <ul>
+                <li><a href="#">Shop Plants</a></li>
+                <li><a href="#">Home Decor</a></li>
+                <li><a href="#">Dog Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <img src="images/hero-banner.jpg" alt="Bloomberry Abode hero image">
+        <h1>Cultivate Beauty in Your Space</h1>
+        <p>Bring nature's charm and harmony into your home with our curated collection of plants and home decor.</p>
+        <a href="#" class="btn">Shop Now - Coming Soon</a>
+    </section>
+
+<!--     <section class="featured">
+        <h2>Featured Products</h2>
+        <div class="products">
+            <div class="product">
+                <img src="images/product1.jpg" alt="Product 1">
+                <h3>Monstera Deliciosa Seeds</h3>
+                <p>$39.99</p>
+            </div>
+            <div class="product">
+                <img src="images/product2.jpg" alt="Product 2">
+                <h3>Hand-Painted Ceramic Pot</h3>
+                <p>$24.99</p>
+            </div>
+            <div class="product">
+                <img src="images/product3.jpg" alt="Product 3">
+                <h3>Macrame Plant Hanger</h3>
+                <p>$19.99</p>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="about">
+        <h2>About Bloomberry Abode</h2>
+        <p>We believe that plants and beautiful home decor have the power to transform spaces and uplift spirits. Our mission is to help you create a home that's both stylish and serene, where you can relax, recharge, and connect with nature.</p>
+        <img src="images/about-us.jpg" alt="About Us image">
+    </section>
+
+    <section class="cta">
+        <h2>Ready to Bloom Your Space?</h2>
+        <a href="#" class="btn">Start Shopping - Coming Soon</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Bloomberry Abode. All rights reserved.</p>
+        <ul class="social-links">
+            <li><a href="https://www.instagram.com/bloomberryabode/">Instagram</a></li>
+            <li><a href="https://www.tiktok.com/@bloomberryabode">TikTok</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
